circle: parallelize tests

--- a/circle.yml
+++ b/circle.yml
@@ -4,4 +4,7 @@ machine:
 
 test:
   override:
-    - py.test
+    - py.test:
+        parallel: true
+        files:
+          - appremotesettings/tests/**/*.py
