circle: py.test parallel with junit xml

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,5 @@ machine:
 
 test:
   override:
-    - py.test:
+    - py.test --junitxml=$CIRCLE_TEST_REPORTS/junit.xml:
         parallel: true
-        files:
-          - appremotesettings/tests/**/*.py
